# KNX-IOT-Virtual-Router

./: CMakeLists.txt  README.md  build.sh  build_unsecured.sh  knx_iot_virtual_router.c  knx_iot_virtual_router.cpp  knx_iot_virtual_router.h  knx_virtual_iot_router.c  knx_virtual_iot_router.cpp  knx_virtual_iot_router.h
.github/workflows/: build-all-and-release.yml  cmake-windows.yml
